--- a/Production/Src/SadGui/MissileLauncherWPF.csproj
+++ b/Production/Src/SadGui/MissileLauncherWPF.csproj
@@ -38,6 +38,8 @@
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=11.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -56,8 +58,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DelegateCommand.cs" />
-    <Compile Include="ViewModelBase.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="GUI ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="GUI Views\LauncherControls.xaml.cs">
+      <DependentUpon>LauncherControls.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GUI ViewModels\ViewModelBase.cs" />
+    <Page Include="GUI Views\LauncherControls.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GUI Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -65,8 +75,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainViewModel.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="GUI ViewModels\MissileControlViewModel.cs" />
+    <Compile Include="GUI Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -99,10 +109,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\TeamDartPersonal\Production\Src\SadCL\SadCL_Main\SadCL.csproj">
+    <ProjectReference Include="..\SadCL\SadCL_Main\SadCL.csproj">
       <Project>{42059611-9375-441c-9af2-c1f4c38213dd}</Project>
       <Name>SadCL</Name>
     </ProjectReference>
